Remove Documentation directory, which is just old Javadocs. Add several unit tests. Extract out several helper methods. Update some copyrights.